--- a/Weekly Project 10/Weekly Project 11.ipynb
+++ b/Weekly Project 10/Weekly Project 11.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "f0dac486",
    "metadata": {},
    "outputs": [
@@ -62,177 +62,242 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country/Region</th>\n",
-       "      <th>Confirmed</th>\n",
-       "      <th>Deaths</th>\n",
-       "      <th>Recovered</th>\n",
-       "      <th>Active</th>\n",
-       "      <th>New cases</th>\n",
-       "      <th>New deaths</th>\n",
-       "      <th>New recovered</th>\n",
-       "      <th>Deaths / 100 Cases</th>\n",
-       "      <th>Recovered / 100 Cases</th>\n",
-       "      <th>Deaths / 100 Recovered</th>\n",
-       "      <th>Confirmed last week</th>\n",
-       "      <th>1 week change</th>\n",
-       "      <th>1 week % increase</th>\n",
-       "      <th>WHO Region</th>\n",
+       "      <th>country</th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>total_vaccinations</th>\n",
+       "      <th>people_vaccinated</th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "      <th>daily_vaccinations_raw</th>\n",
+       "      <th>daily_vaccinations</th>\n",
+       "      <th>total_vaccinations_per_hundred</th>\n",
+       "      <th>people_vaccinated_per_hundred</th>\n",
+       "      <th>people_fully_vaccinated_per_hundred</th>\n",
+       "      <th>daily_vaccinations_per_million</th>\n",
+       "      <th>vaccines</th>\n",
+       "      <th>source_name</th>\n",
+       "      <th>source_website</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Afghanistan</td>\n",
-       "      <td>36263</td>\n",
-       "      <td>1269</td>\n",
-       "      <td>25198</td>\n",
-       "      <td>9796</td>\n",
-       "      <td>106</td>\n",
-       "      <td>10</td>\n",
-       "      <td>18</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>69.49</td>\n",
-       "      <td>5.04</td>\n",
-       "      <td>35526</td>\n",
-       "      <td>737</td>\n",
-       "      <td>2.07</td>\n",
-       "      <td>Eastern Mediterranean</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>4880</td>\n",
-       "      <td>144</td>\n",
-       "      <td>2745</td>\n",
-       "      <td>1991</td>\n",
-       "      <td>117</td>\n",
-       "      <td>6</td>\n",
-       "      <td>63</td>\n",
-       "      <td>2.95</td>\n",
-       "      <td>56.25</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>4171</td>\n",
-       "      <td>709</td>\n",
-       "      <td>17.00</td>\n",
-       "      <td>Europe</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>27973</td>\n",
-       "      <td>1163</td>\n",
-       "      <td>18837</td>\n",
-       "      <td>7973</td>\n",
-       "      <td>616</td>\n",
-       "      <td>8</td>\n",
-       "      <td>749</td>\n",
-       "      <td>4.16</td>\n",
-       "      <td>67.34</td>\n",
-       "      <td>6.17</td>\n",
-       "      <td>23691</td>\n",
-       "      <td>4282</td>\n",
-       "      <td>18.07</td>\n",
-       "      <td>Africa</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>907</td>\n",
-       "      <td>52</td>\n",
-       "      <td>803</td>\n",
-       "      <td>52</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.73</td>\n",
-       "      <td>88.53</td>\n",
-       "      <td>6.48</td>\n",
-       "      <td>884</td>\n",
-       "      <td>23</td>\n",
-       "      <td>2.60</td>\n",
-       "      <td>Europe</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>950</td>\n",
-       "      <td>41</td>\n",
-       "      <td>242</td>\n",
-       "      <td>667</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.32</td>\n",
-       "      <td>25.47</td>\n",
-       "      <td>16.94</td>\n",
-       "      <td>749</td>\n",
-       "      <td>201</td>\n",
-       "      <td>26.84</td>\n",
-       "      <td>Africa</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>2021-02-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1367.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>Johnson&amp;Johnson, Oxford/AstraZeneca, Pfizer/Bi...</td>\n",
+       "      <td>World Health Organization</td>\n",
+       "      <td>https://covid19.who.int/</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Country/Region  Confirmed  Deaths  Recovered  Active  New cases  New deaths  \\\n",
-       "0    Afghanistan      36263    1269      25198    9796        106          10   \n",
-       "1        Albania       4880     144       2745    1991        117           6   \n",
-       "2        Algeria      27973    1163      18837    7973        616           8   \n",
-       "3        Andorra        907      52        803      52         10           0   \n",
-       "4         Angola        950      41        242     667         18           1   \n",
+       "       country iso_code        date  total_vaccinations  people_vaccinated  \\\n",
+       "0  Afghanistan      AFG  2021-02-22                 0.0                0.0   \n",
+       "1  Afghanistan      AFG  2021-02-23                 NaN                NaN   \n",
+       "2  Afghanistan      AFG  2021-02-24                 NaN                NaN   \n",
+       "3  Afghanistan      AFG  2021-02-25                 NaN                NaN   \n",
+       "4  Afghanistan      AFG  2021-02-26                 NaN                NaN   \n",
        "\n",
-       "   New recovered  Deaths / 100 Cases  Recovered / 100 Cases  \\\n",
-       "0             18                3.50                  69.49   \n",
-       "1             63                2.95                  56.25   \n",
-       "2            749                4.16                  67.34   \n",
-       "3              0                5.73                  88.53   \n",
-       "4              0                4.32                  25.47   \n",
+       "   people_fully_vaccinated  daily_vaccinations_raw  daily_vaccinations  \\\n",
+       "0                      NaN                     NaN                 NaN   \n",
+       "1                      NaN                     NaN              1367.0   \n",
+       "2                      NaN                     NaN              1367.0   \n",
+       "3                      NaN                     NaN              1367.0   \n",
+       "4                      NaN                     NaN              1367.0   \n",
        "\n",
-       "   Deaths / 100 Recovered  Confirmed last week  1 week change  \\\n",
-       "0                    5.04                35526            737   \n",
-       "1                    5.25                 4171            709   \n",
-       "2                    6.17                23691           4282   \n",
-       "3                    6.48                  884             23   \n",
-       "4                   16.94                  749            201   \n",
+       "   total_vaccinations_per_hundred  people_vaccinated_per_hundred  \\\n",
+       "0                             0.0                            0.0   \n",
+       "1                             NaN                            NaN   \n",
+       "2                             NaN                            NaN   \n",
+       "3                             NaN                            NaN   \n",
+       "4                             NaN                            NaN   \n",
        "\n",
-       "   1 week % increase             WHO Region  \n",
-       "0               2.07  Eastern Mediterranean  \n",
-       "1              17.00                 Europe  \n",
-       "2              18.07                 Africa  \n",
-       "3               2.60                 Europe  \n",
-       "4              26.84                 Africa  "
+       "   people_fully_vaccinated_per_hundred  daily_vaccinations_per_million  \\\n",
+       "0                                  NaN                             NaN   \n",
+       "1                                  NaN                            34.0   \n",
+       "2                                  NaN                            34.0   \n",
+       "3                                  NaN                            34.0   \n",
+       "4                                  NaN                            34.0   \n",
+       "\n",
+       "                                            vaccines  \\\n",
+       "0  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
+       "1  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
+       "2  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
+       "3  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
+       "4  Johnson&Johnson, Oxford/AstraZeneca, Pfizer/Bi...   \n",
+       "\n",
+       "                 source_name            source_website  \n",
+       "0  World Health Organization  https://covid19.who.int/  \n",
+       "1  World Health Organization  https://covid19.who.int/  \n",
+       "2  World Health Organization  https://covid19.who.int/  \n",
+       "3  World Health Organization  https://covid19.who.int/  \n",
+       "4  World Health Organization  https://covid19.who.int/  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('country_wise_latest.csv')\n",
+    "df = pd.read_csv('country_vaccinations.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "161652fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 86512 entries, 0 to 86511\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column                               Non-Null Count  Dtype  \n",
+      "---  ------                               --------------  -----  \n",
+      " 0   country                              86512 non-null  object \n",
+      " 1   iso_code                             86512 non-null  object \n",
+      " 2   date                                 86512 non-null  object \n",
+      " 3   total_vaccinations                   43607 non-null  float64\n",
+      " 4   people_vaccinated                    41294 non-null  float64\n",
+      " 5   people_fully_vaccinated              38802 non-null  float64\n",
+      " 6   daily_vaccinations_raw               35362 non-null  float64\n",
+      " 7   daily_vaccinations                   86213 non-null  float64\n",
+      " 8   total_vaccinations_per_hundred       43607 non-null  float64\n",
+      " 9   people_vaccinated_per_hundred        41294 non-null  float64\n",
+      " 10  people_fully_vaccinated_per_hundred  38802 non-null  float64\n",
+      " 11  daily_vaccinations_per_million       86213 non-null  float64\n",
+      " 12  vaccines                             86512 non-null  object \n",
+      " 13  source_name                          86512 non-null  object \n",
+      " 14  source_website                       86512 non-null  object \n",
+      "dtypes: float64(9), object(6)\n",
+      "memory usage: 9.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b4e285a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(187, 15)"
+       "0        2021-02-22\n",
+       "1        2021-02-23\n",
+       "2        2021-02-24\n",
+       "3        2021-02-25\n",
+       "4        2021-02-26\n",
+       "            ...    \n",
+       "86507    2022-03-25\n",
+       "86508    2022-03-26\n",
+       "86509    2022-03-27\n",
+       "86510    2022-03-28\n",
+       "86511    2022-03-29\n",
+       "Name: date, Length: 86512, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "date = df['date']\n",
+    "date"
    ]
   },
   {
@@ -241,6 +306,19 @@
    "metadata": {},
    "source": [
     "# Adding Year Column in the dataset from Date Column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5ef816eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def year(date):\n",
+    "    return date.split('-')[0]\n",
+    "\n",
+    "df['year'] = date.apply(year)"
    ]
   },
   {
@@ -253,19 +331,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "15c6a61d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "654036 is the total number of deaths as per the dataset\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12',\n",
+       "       '01'], dtype=object)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def month(date):\n",
+    "    return date.split('-')[1]\n",
+    "\n",
+    "df['month'] = date.apply(month)\n",
+    "df['month'].unique()"
+   ]
   },
   {
    "cell_type": "markdown",
