--- a/Weekly Project 10/Weekly Project 11.ipynb
+++ b/Weekly Project 10/Weekly Project 11.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "f0dac486",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "4  World Health Organization  https://covid19.who.int/  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "161652fd",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "b4e285a0",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "Name: date, Length: 86512, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "5ef816eb",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "15c6a61d",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "       '01'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,19 +365,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "796ec935",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16480485 is the total number of confirmed cases\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['22', '23', '24', '25', '26', '27', '28', '01', '02', '03', '04',\n",
+       "       '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15',\n",
+       "       '16', '17', '18', '19', '20', '21', '29', '30', '31'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def day(date):\n",
+    "    return date.split('-')[-1]\n",
+    "\n",
+    "df['day'] = date.apply(day)\n",
+    "df['day'].unique()"
+   ]
   },
   {
    "cell_type": "code",
