--- a/Weekly Project 2/Weekly Project - 2.ipynb
+++ b/Weekly Project 2/Weekly Project - 2.ipynb
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fb57015",
+   "id": "c4ea530e",
    "metadata": {},
    "source": [
     "### View of Students details in DataFrame"
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a85c8b82",
+   "id": "bd523931",
    "metadata": {},
    "outputs": [
     {
@@ -2101,7 +2101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0af8ad0",
+   "id": "dc371e82",
    "metadata": {},
    "source": [
     "### Save DataFrame in .csv"
@@ -2110,7 +2110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "be05b8c9",
+   "id": "cc9f5f9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "7998f333",
    "metadata": {},
    "outputs": [
@@ -2348,18 +2348,48 @@
      "output_type": "stream",
      "text": [
       "****************************************\n",
-      "Enter the stud_id: vu100\n",
+      "Enter the stud_id: vu123\n",
       "****************************************\n",
       "Student details\n",
       "----------------------------------------\n",
-      "Student id          : vu100\n",
-      "Student Name        : Stengel, Mrs. Charles Emil Henry (Annie May Morris)\n",
-      "Division            : 1\n",
-      "Gender              : female\n",
+      "Student id          : vu123\n",
+      "Student Name        : Carver, Mr. Alfred John\n",
+      "Division            : 3\n",
+      "Gender              : male\n",
+      "No of days attended : 0\n",
+      "----------------------------------------\n",
+      "Press enter to login..\n",
+      "----------------------------------------\n",
+      "Login sucessfully on 06-11-2022 in 20:33:30\n",
+      "Now you can do your work\n",
+      "****************************************\n",
+      "Enter the stud_id: vu123\n",
+      "****************************************\n",
+      "Student details\n",
+      "----------------------------------------\n",
+      "Student id          : vu123\n",
+      "Student Name        : Carver, Mr. Alfred John\n",
+      "Division            : 3\n",
+      "Gender              : male\n",
+      "No of days attended : 1\n",
+      "----------------------------------------\n",
+      "Press enter to logout..\n",
+      "----------------------------------------\n",
+      "Logout Sucessfully!!\n",
+      "****************************************\n",
+      "Enter the stud_id: vu123\n",
+      "****************************************\n",
+      "Student details\n",
+      "----------------------------------------\n",
+      "Student id          : vu123\n",
+      "Student Name        : Carver, Mr. Alfred John\n",
+      "Division            : 3\n",
+      "Gender              : male\n",
       "No of days attended : 1\n",
       "----------------------------------------\n",
       "Today's Attendance is marked!!\n",
-      "****************************************\n"
+      "****************************************\n",
+      "Enter the stud_id: exit\n"
      ]
     }
    ],
@@ -2447,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9c76274d",
+   "id": "f22c55e5",
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20d52e85",
+   "id": "2c072cd6",
    "metadata": {},
    "outputs": [],
    "source": [
