--- a/Major Project 1/Major Project - 1 .ipynb
+++ b/Major Project 1/Major Project - 1 .ipynb
@@ -23,14 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1c17c1bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json as js\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "bb7bc784",
    "metadata": {},
    "outputs": [],
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "44dcc9d4",
    "metadata": {},
    "outputs": [],
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "5c2ea030",
    "metadata": {},
    "outputs": [
@@ -508,7 +509,7 @@
        "36  133     godrej jersey ghee 100ml  milk products    82       78       12"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "7163ee42",
    "metadata": {},
    "outputs": [],
@@ -583,21 +584,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "014c16d9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "137"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_id(ids):\n",
     "    \n",
@@ -612,7 +602,7 @@
     "            \n",
     "       \n",
     "        \n",
-    "get_id(read_file().keys())"
+    "#get_id(read_file().keys())"
    ]
   },
   {
@@ -768,6 +758,308 @@
     "\n",
     "remove_product()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3edee639",
+   "metadata": {},
+   "source": [
+    "## **Product Purchase by customer**\n",
+    "\n",
+    "transcation format\n",
+    "\n",
+    "```python\n",
+    "{\n",
+    "    transation_id_1 : {\n",
+    "        'name':\n",
+    "        'products': [ (product_id, quantiy, price), (product_2),.... ]\n",
+    "    },\n",
+    "    transation_id_1 : { ... },\n",
+    "    ...,\n",
+    "    'id': max_id\n",
+    "}\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "785f1dc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def view_purchase(carts,m):\n",
+    "    \n",
+    "    print('Sr',\"Name\".ljust(m), \"Quantity\",'MRP',\"Price\",\"Total\")\n",
+    "    \n",
+    "    print('-'*40)\n",
+    "    \n",
+    "    total_saving  = 0\n",
+    "    overall_total = 0\n",
+    "    \n",
+    "    for sr, n, q, d in enumerate(carts):\n",
+    "        \n",
+    "        price          = str( float(q) - float(d) )\n",
+    "        total          = str( float(price) * int(q) )\n",
+    "        total_saving  += float(d)\n",
+    "        overall_total += float(total)\n",
+    "        \n",
+    "        print( str(sr).ljust(2), n.ljust(m), q.ljust(8), price.ljust(5), total )\n",
+    "        \n",
+    "    print('-'*40)\n",
+    "    \n",
+    "    print('Total Saving:',str(total_saving).ljust(9+m),\"Total:\",overall_total)\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "    \n",
+    "def purchase_product():\n",
+    "    \n",
+    "    data = read_file()\n",
+    "    carts = []\n",
+    "    max_len = 0\n",
+    "    \n",
+    "    while True:\n",
+    "        print( '*' * 40 )\n",
+    "        \n",
+    "        if carts != []: view_purchase(carts)\n",
+    "        \n",
+    "        prod_id = input('Scan Product or Enter the product id: ')\n",
+    "        \n",
+    "        if not (prod_id.lower() in 'exit,pay'):\n",
+    "            quant   = int(input('Enter the quantity'))\n",
+    "\n",
+    "            print('-'*40)\n",
+    "\n",
+    "            \n",
+    "\n",
+    "            prods   = data[prod_id]\n",
+    "\n",
+    "            prod    = (prod[0], quant, prod[2], prod[-1] )\n",
+    "\n",
+    "            max_len = len(prod[0]) if max_len < len(prod[0]) \n",
+    "\n",
+    "            carts.append( prod )\n",
+    "\n",
+    "            if data[prod_id][3] > 0: data[prod_id][3] =  int(data[prod_id][3]) - quant\n",
+    "\n",
+    "            \n",
+    "        \n",
+    "        if prod_id.lower() == 'pay':\n",
+    "            print( '*' * 40 )\n",
+    "            name = input('Enter your name: ')git\n",
+    "        \n",
+    "        os.system('cls')\n",
+    "            \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9d0f9d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = product_views()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4e08c467",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dairy milk\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df['Name']:\n",
+    "    if 'milk' in i :print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2dee78e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Discount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "      <td>dairy milk</td>\n",
+       "      <td>chocalate</td>\n",
+       "      <td>25</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>101</td>\n",
+       "      <td>5-star</td>\n",
+       "      <td>chocalate</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102</td>\n",
+       "      <td>kit-kat</td>\n",
+       "      <td>chocalate</td>\n",
+       "      <td>20</td>\n",
+       "      <td>30</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>103</td>\n",
+       "      <td>parle-g</td>\n",
+       "      <td>biscuit</td>\n",
+       "      <td>10</td>\n",
+       "      <td>996</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>104</td>\n",
+       "      <td>monaco</td>\n",
+       "      <td>biscuit</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1076</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Id        Name   Category Price Quantity Discount\n",
+       "0  100  dairy milk  chocalate    25       10       10\n",
+       "1  101      5-star  chocalate    15        6        5\n",
+       "2  102     kit-kat  chocalate    20       30       15\n",
+       "3  103     parle-g    biscuit    10      996        0\n",
+       "4  104      monaco    biscuit     5     1076        0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0c3c5af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Name'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Name\".ljust(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5a1b6b59",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1042741598.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [8]\u001b[1;36m\u001b[0m\n\u001b[1;33m    12.ljust(2)\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "12.ljust(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bce32115",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'exit' in 'exit,done,paid'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fab20eef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
