update Major Project 1
Completed purchase function
updated read_file and write_file for record.json and transcation.json

update record.json file

--- a/Major Project 1/Major Project - 1 .ipynb
+++ b/Major Project 1/Major Project - 1 .ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1c17c1bf",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,8 @@
     "import json as js\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
@@ -39,28 +40,33 @@
    "id": "92ae3c38",
    "metadata": {},
    "source": [
-    "## **Read and Write function from Json Files**"
+    "## **Read and Write function for json Files**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "bb7bc784",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reads records.json file and return dictionary \n",
+    "# reads json file and return dictionary \n",
     "\n",
-    "def read_file():\n",
+    "def read_file(products=True):\n",
     "    \n",
-    "    # Opening records.json file in read mode\n",
-    "    fw = open('records.json','r')\n",
+    "    fr = None\n",
     "    \n",
+    "    # Opening records.json file in read mode if product is True\n",
+    "    if products: fr = open('records.json','r')\n",
+    "    \n",
+    "    # Opening transaction.json file in read mode if product is False\n",
+    "    else: fr = open('transaction.json','r')\n",
+    "\n",
     "    # Loading json file into dictionary\n",
-    "    r = js.loads(fw.read())\n",
-    "    \n",
+    "    r = js.loads(fr.read())\n",
+    "\n",
     "    # Closing the file\n",
-    "    fw.close()\n",
+    "    fr.close()\n",
     "    \n",
     "    # Return dictionary\n",
     "    return r"
@@ -68,21 +74,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "44dcc9d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write records.json file for given dictionaty input \n",
+    "#Write json file for given dictionaty input \n",
     "\n",
-    "def write_file(var):\n",
+    "def write_file(var,products=True):\n",
     "    \n",
-    "    # Opening records.json file in write mode\n",
-    "    fw = open('records.json','w')\n",
+    "    fw = None\n",
     "    \n",
+    "    # Opening records.json file in write mode if product is True\n",
+    "    if products: fw = open('records.json','w')\n",
+    "        \n",
+    "    # Opening transaction.json file in write mode if product is False\n",
+    "    else: fw = open('transaction.json','w')\n",
+    "\n",
     "    # Dumping dictionary into json file  \n",
     "    fw.write(js.dumps(var))\n",
-    "    \n",
+    "\n",
     "    # Closing the file\n",
     "    fw.close()"
    ]
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "5c2ea030",
    "metadata": {},
    "outputs": [
@@ -509,7 +520,7 @@
        "36  133     godrej jersey ghee 100ml  milk products    82       78       12"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,9 +659,9 @@
     "    \n",
     "    Name     = input('Enter the Name: ').lower()    \n",
     "    Category = input('Enter the Category: ').lower()\n",
-    "    Price    = input('Enter the Price: ')\n",
-    "    Quantity = input('Enter the Quantity: ')\n",
-    "    Discount = input('Enter the Discount: ')\n",
+    "    Price    = float(input('Enter the Price: '))\n",
+    "    Quantity = float(input('Enter the Quantity: '))\n",
+    "    Discount = float(input('Enter the Discount: '))\n",
     "    \n",
     "    print( '-' * 40 )\n",
     "    \n",
@@ -772,7 +783,7 @@
     "{\n",
     "    transation_id_1 : {\n",
     "        'name':\n",
-    "        'products': [ (product_id, quantiy, price), (product_2),.... ]\n",
+    "        'products': [ (product_name, quantiy, price, discount), (product_2),.... ]\n",
     "    },\n",
     "    transation_id_1 : { ... },\n",
     "    ...,\n",
@@ -783,32 +794,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "785f1dc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****************************************\n",
+      "Sr Name        Quantity MRP Price Total\n",
+      "---------------------------------------\n",
+      "1  dairy milk  4        25  15.0  60.0\n",
+      "2  kit-kat     1        20  5.0   5.0\n",
+      "3  uncle-chips 3        10  -11.0 -33.0\n",
+      "---------------------------------------\n",
+      "Total Saving: 46.0         Total: 32.0\n",
+      "Scan Product or Enter the product id: exit\n"
+     ]
+    }
+   ],
    "source": [
     "def view_purchase(carts,m):\n",
     "    \n",
     "    print('Sr',\"Name\".ljust(m), \"Quantity\",'MRP',\"Price\",\"Total\")\n",
     "    \n",
-    "    print('-'*40)\n",
+    "    print('-'*(m+28))\n",
     "    \n",
     "    total_saving  = 0\n",
     "    overall_total = 0\n",
     "    \n",
-    "    for sr, n, q, d in enumerate(carts):\n",
+    "    sr = 1\n",
+    "    \n",
+    "    for n, q, mrp, d in carts:\n",
     "        \n",
-    "        price          = str( float(q) - float(d) )\n",
+    "        #print(n)\n",
+    "        \n",
+    "        price          = str( float(mrp) - float(d) )\n",
     "        total          = str( float(price) * int(q) )\n",
     "        total_saving  += float(d)\n",
     "        overall_total += float(total)\n",
     "        \n",
-    "        print( str(sr).ljust(2), n.ljust(m), q.ljust(8), price.ljust(5), total )\n",
+    "        print( str(sr).ljust(2), n.ljust(m), str(q).ljust(8), str(mrp).ljust(3), price.ljust(5), total )\n",
     "        \n",
-    "    print('-'*40)\n",
+    "        sr += 1\n",
+    "        \n",
+    "    print('-'*(m+28))\n",
     "    \n",
-    "    print('Total Saving:',str(total_saving).ljust(9+m),\"Total:\",overall_total)\n",
+    "    print('Total Saving:',str(total_saving).ljust(m+1),\"Total:\",overall_total)\n",
     "    \n",
     "    \n",
     "        \n",
@@ -817,12 +850,12 @@
     "    \n",
     "    data = read_file()\n",
     "    carts = []\n",
-    "    max_len = 0\n",
+    "    max_len = 4\n",
     "    \n",
     "    while True:\n",
     "        print( '*' * 40 )\n",
     "        \n",
-    "        if carts != []: view_purchase(carts)\n",
+    "        if carts != []: view_purchase(carts,max_len)\n",
     "        \n",
     "        prod_id = input('Scan Product or Enter the product id: ')\n",
     "        \n",
@@ -835,29 +868,38 @@
     "\n",
     "            prods   = data[prod_id]\n",
     "\n",
-    "            prod    = (prod[0], quant, prod[2], prod[-1] )\n",
+    "            prod    = (prods[0], quant, prods[2], prods[-1] )\n",
     "\n",
-    "            max_len = len(prod[0]) if max_len < len(prod[0]) \n",
+    "            max_len = max( len(prod[0]), max_len) \n",
     "\n",
     "            carts.append( prod )\n",
     "\n",
-    "            if data[prod_id][3] > 0: data[prod_id][3] =  int(data[prod_id][3]) - quant\n",
+    "            if int(data[prod_id][3]) > 0: data[prod_id][3] =  int(data[prod_id][3]) - quant\n",
     "\n",
     "            \n",
     "        \n",
     "        if prod_id.lower() == 'pay':\n",
-    "            print( '*' * 40 )\n",
-    "            name = input('Enter your name: ')git\n",
+    "            name          = input('Enter your name: ')\n",
+    "            \n",
+    "            trans         = read_file(False)\n",
+    "            \n",
+    "            new_id        = trans['id']\n",
+    "            \n",
+    "            trans[new_id] = { 'name': name, 'products': cart }\n",
+    "            \n",
+    "            cart          = []\n",
+    "            max_len       = 4\n",
+    "            \n",
+    "            trans['id']   = str( int(new_id) + 1 )\n",
+    "            \n",
     "        \n",
-    "        os.system('cls')\n",
+    "        if prod_id.lower() == 'exit':break\n",
     "            \n",
     "            \n",
     "        \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "        clear_output(wait=True)\n",
+    "            \n",
+    "purchase_product()"
    ]
   },
   {
@@ -1034,29 +1076,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "bce32115",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Discount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>115</td>\n",
+       "      <td>vanila flever</td>\n",
+       "      <td>icecream</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2349</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>121</td>\n",
+       "      <td>maggie</td>\n",
+       "      <td>snake</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>122</td>\n",
+       "      <td>uncle-chips</td>\n",
+       "      <td>snake</td>\n",
+       "      <td>10</td>\n",
+       "      <td>500</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>123</td>\n",
+       "      <td>tomato-chips</td>\n",
+       "      <td>snake</td>\n",
+       "      <td>10</td>\n",
+       "      <td>600</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>136</td>\n",
+       "      <td>foodex besan ladoo box 200g</td>\n",
+       "      <td>sweets</td>\n",
+       "      <td>115</td>\n",
+       "      <td>8966</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "True"
+       "     Id                         Name  Category Price Quantity Discount\n",
+       "15  115                vanila flever  icecream    20     2349       30\n",
+       "21  121                       maggie     snake    10     1500       18\n",
+       "22  122                  uncle-chips     snake    10      500       21\n",
+       "23  123                 tomato-chips     snake    10      600       13\n",
+       "35  136  foodex besan ladoo box 200g    sweets   115     8966       15"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'exit' in 'exit,done,paid'"
+    "df = product_views()\n",
+    "df[df.Price < df.Discount ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dafacac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    \n",
+    "    exit = input()\n",
+    "    print(exit)\n",
+    "    clear_output(wait=True)\n",
+    "    \n",
+    "    if exit=='1':break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab20eef",
+   "id": "13eee6cd",
    "metadata": {},
    "outputs": [],
    "source": []
