--- a/Major Project 1/Major Project - 1 .ipynb
+++ b/Major Project 1/Major Project - 1 .ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "5c2ea030",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "36  133     godrej jersey ghee 100ml  milk products     82        78        12"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "9acbb9c1",
    "metadata": {},
    "outputs": [
@@ -638,19 +638,19 @@
       "****************************************\n",
       "Adding new product in Inventory\n",
       "----------------------------------------\n",
-      "Enter the Name: Godrej Jersey Ghee 100ml\n",
-      "Enter the Category: Milk products\n",
-      "Enter the Price: 82\n",
-      "Enter the Quantity: 78\n",
-      "Enter the Discount: 12\n",
+      "Enter the Name: Bisleri Club Soda: 750 ml\n",
+      "Enter the Category: drinks\n",
+      "Enter the Price: 20\n",
+      "Enter the Quantity: 1324\n",
+      "Enter the Discount: 10\n",
       "----------------------------------------\n",
-      "Product id of new product : 133\n",
+      "Product id of new product : 137\n",
       "------------Product Details-------------\n",
-      "Name     : godrej jersey ghee 100ml\n",
-      "Category : milk products\n",
-      "Price    : 82\n",
-      "Quantity : 78\n",
-      "Discount : 12\n",
+      "Name     : bisleri club soda: 750 ml\n",
+      "Category : drinks\n",
+      "Price    : 20.0\n",
+      "Quantity : 1324.0\n",
+      "Discount : 10.0\n",
       "****************************************\n"
      ]
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "5e9c78c6",
    "metadata": {},
    "outputs": [
@@ -717,16 +717,16 @@
      "output_type": "stream",
      "text": [
       "****************************************\n",
-      "Enter the product id: 133\n",
+      "Enter the product id: 132\n",
       "------------Product Details-------------\n",
-      "Name     : tata tea 250\n",
-      "Category : drinks\n",
-      "Price    : 135\n",
-      "Quantity : 2345\n",
-      "Discount : 20\n",
+      "Name     : eclair\n",
+      "Category : chocalate\n",
+      "Price    : 2\n",
+      "Quantity : 100\n",
+      "Discount : 0\n",
       "----------------------------------------\n",
       "This product has some quantities Do you want to remove it ? (Say Yes/No): Yes\n",
-      "This product has lose of Rs 316575.0\n",
+      "This product has loss of Rs 200.0\n",
       "Deleted Sucessfully !!\n",
       "****************************************\n"
      ]
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "15a11460",
    "metadata": {},
    "outputs": [
@@ -831,18 +831,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "****************************************\n",
-      "Sr Name                     Quantity MRP Price Total\n",
-      "----------------------------------------------------\n",
-      "1  tomato-chips             20       35  25.0  500.0\n",
-      "2  godrej jersey ghee 100ml 6        82  70.0  420.0\n",
-      "3  dairy milk               11       25  15.0  165.0\n",
-      "4  monaco                   2        5   5.0   10.0\n",
-      "5  50-50                    5        5   5.0   25.0\n",
-      "----------------------------------------------------\n",
-      "Total Saving: 382.0                     Total: 1120.0\n",
+      "*******************************************************\n",
+      "Sr Name                        Quantity MRP Price Total\n",
+      "-------------------------------------------------------\n",
+      "1  parle-g                     4        10  10.0  40.0\n",
+      "2  parle-gold                  5        20  20.0  100.0\n",
+      "3  foodex besan ladoo box 200g 3        115 100.0 300.0\n",
+      "4  mango flever                8        20  16.0  128.0\n",
+      "-------------------------------------------------------\n",
+      "Total Saving: 77.0                         Total: 568.0\n",
       "Scan Product or Enter the product id: pay\n",
-      "Enter your name: Suyash Salvi\n"
+      "Enter your name: Manas Patil\n"
      ]
     }
    ],
@@ -988,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "4e08c467",
    "metadata": {},
    "outputs": [
@@ -1000,7 +999,8 @@
       "Bill_no_1000_Ashish_Jangra.csv\n",
       "Bill_no_1001_Pratik_Maurya.csv\n",
       "Bill_no_1002_Lokesh_Parab.csv\n",
-      "Bill_no_1003_Suyash_Salvi.csv\n"
+      "Bill_no_1003_Suyash_Salvi.csv\n",
+      "Bill_no_1004_Manas_Patil.csv\n"
      ]
     }
    ],
@@ -1067,14 +1067,6 @@
     "        \n",
     "save_bill()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ebbb278",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
